--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,8 @@
-
+@import url("https://fonts.googleapis.com/css?family=Comfortaa");
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
 
 /*# sourceMappingURL=main.css.map */
