--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,11 +5,8 @@
   margin: 0;
 }
 
-body, html {
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-  position: relative;
+body,
+html {
   font-family: "Comfortaa", sans-serif;
 }
 
@@ -19,7 +16,7 @@ body, html {
 }
 #container #score {
   position: absolute;
-  top: 20px;
+  top: 5rem;
   width: 100%;
   text-align: center;
   font-size: 10vh;
@@ -48,13 +45,15 @@ body, html {
 #container .game-over * {
   transition: opacity 0.5s ease, transform 0.5s ease;
   opacity: 0;
+  padding: 0.5rem;
   transform: translateY(-50px);
   color: #333344;
 }
 #container .game-over h2 {
   margin: 0;
   padding: 0;
-  font-size: 40px;
+  font-size: 5rem;
+  text-align: center;
 }
 #container .game-ready {
   position: absolute;
@@ -71,7 +70,6 @@ body, html {
   transition: opacity 0.5s ease, transform 0.5s ease;
   opacity: 0;
   transform: translatey(-50px);
-  border: 3px solid #333344;
   padding: 10px 20px;
   background-color: transparent;
   color: #333344;
@@ -80,31 +78,30 @@ body, html {
 #container #instructions {
   position: absolute;
   width: 100%;
-  top: 16vh;
+  top: 19vh;
   left: 0;
   text-align: center;
   transition: opacity 0.5s ease, transform 0.5s ease;
-  opacity: 0;
 }
 #container #instructions.hide {
   opacity: 0 !important;
 }
 #container.playing #score, #container.resetting #score {
-  transform: translatey(0px) scale(1);
+  transform: translateY(0px) scale(1);
 }
 #container.playing #instructions {
   opacity: 1;
 }
 #container.ready .game-ready #start-button {
   opacity: 1;
-  transform: translatey(0);
+  transform: translateY(0);
 }
 #container.ended #score {
-  transform: translatey(6vh) scale(1.5);
+  transform: translateY(6vh) scale(1.5);
 }
 #container.ended .game-over * {
   opacity: 1;
-  transform: translatey(0);
+  transform: translateY(0);
 }
 #container.ended .game-over p {
   transition-delay: 0.3s;
