--- a/src/scss/components/_game.scss
+++ b/src/scss/components/_game.scss
@@ -1,10 +1,7 @@
 @use "../base/variables" as b;
 
-body, html {
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-  position: relative;
+body,
+html {
   font-family: b.$ff-main;
 }
 
@@ -12,123 +9,124 @@ body, html {
   width: 100%;
   height: 100%;
 
-  	#score {
-		position: absolute;
-		top:20px;
-		width: 100%;
-		text-align: center;
-		font-size: 10vh;
-		transition: transform 0.5s ease;
-		color: b.$color-dark;
-		transform: translateY(-200px) scale(1);
-	}
+  #score {
+    position: absolute;
+    top: 5rem;
+    width: 100%;
+    text-align: center;
+    font-size: 10vh;
+    transition: transform 0.5s ease;
+    color: b.$color-dark;
+    transform: translateY(-200px) scale(1);
+  }
 
-	#game{
-		position: absolute;
-		top: 0;
-		right: 0;
-		bottom: 0;
-		left: 0;
-	}
-	
-	.game-over {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 85%;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-		
-		* {
-			transition: opacity 0.5s ease, transform 0.5s ease;
-			opacity: 0;
-			transform: translateY(-50px);
-			color: b.$color-dark;
-		}
-		
-		h2{
-			margin: 0;
-			padding: 0;
-			font-size: 40px;
-		}
-	}
-	
-	.game-ready {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: space-around;
-		
-		#start-button {
-			transition: opacity 0.5s ease, transform 0.5s ease;
-			opacity: 0;
-			transform: translatey(-50px);
-			border: 3px solid b.$color-dark;
-			padding: 10px 20px;
-			background-color: transparent;
-			color: b.$color-dark;
-			font-size: 30px;
-		}
-	}
-	
-	#instructions {
-		position: absolute;
-		width: 100%;
-		top: 16vh;
-		left: 0;
-		text-align: center;
-		transition: opacity 0.5s ease, transform 0.5s ease;
-		
-		opacity: 0;
-		
-		&.hide {
-			opacity: 0 !important;
-		}
-	}
-	
-	&.playing, &.resetting {
-		#score {
-			transform: translatey(0px) scale(1);
-		}
-	}
-	
-	&.playing {
-		#instructions {
-			opacity: 1;
-		}
-	}
-	
-	&.ready {
-		.game-ready {
-			#start-button {
-				opacity: 1;
-				transform: translatey(0);
-			}
-		}
-	}
-	
-	&.ended {
-		#score {
-			transform: translatey(6vh) scale(1.5);
-		}
-		
-		.game-over {
-			* {
-				opacity: 1;
-				transform: translatey(0);
-			}
-			
-			p {
-				transition-delay: 0.3s;
-			}
-		}
-	}
+  #game {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
+
+  .game-over {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 85%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    * {
+      transition: opacity 0.5s ease, transform 0.5s ease;
+      opacity: 0;
+      padding: 0.5rem;
+      transform: translateY(-50px);
+      color: b.$color-dark;
+    }
+
+    h2 {
+      margin: 0;
+      padding: 0;
+      font-size: 5rem;
+      text-align: center;
+    }
+  }
+
+  .game-ready {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+
+    #start-button {
+      transition: opacity 0.5s ease, transform 0.5s ease;
+      opacity: 0;
+      transform: translatey(-50px);
+      // border: 3px solid b.$color-dark;
+      padding: 10px 20px;
+      background-color: transparent;
+      color: b.$color-dark;
+      font-size: 30px;
+    }
+  }
+
+  #instructions {
+    position: absolute;
+    width: 100%;
+    top: 19vh;
+    left: 0;
+    text-align: center;
+    transition: opacity 0.5s ease, transform 0.5s ease;
+
+    &.hide {
+      opacity: 0 !important;
+    }
+  }
+
+  &.playing,
+  &.resetting {
+    #score {
+      transform: translateY(0px) scale(1);
+    }
+  }
+
+  &.playing {
+    #instructions {
+      opacity: 1;
+    }
+  }
+
+  &.ready {
+    .game-ready {
+      #start-button {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+  }
+
+  &.ended {
+    #score {
+      transform: translateY(6vh) scale(1.5);
+    }
+
+    .game-over {
+      * {
+        opacity: 1;
+        transform: translateY(0);
+      }
+
+      p {
+        transition-delay: 0.3s;
+      }
+    }
+  }
 }
